# qrcodereader_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-image.yml
app/: __init__.py  config.py  detector.py  errors.py  fetch.py  main.py  schemas.py
tests/: conftest.py  test_api.py  test_detector_service.py  test_url_guards.py
